--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -21,6 +21,7 @@ python-jose = "^3.3.0"
 aiomysql = "^0.2.0"
 itsdangerous = "^2.2.0"
 jinja2 = "^3.1.4"
+cryptography = "^43.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
