--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Custom
+logs/
+teddynote/
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,visualstudiocode,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,visualstudiocode,dotenv
 
