--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,18 +18,24 @@ jobs:
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    # 3. Docker Compose로 이미지 빌드
+    # 3. Docker Compose 설치
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose-plugin
+
+    # 4. Docker Compose로 이미지 빌드
     - name: Build Docker images
       run: |
         docker-compose build
 
-    # 4. Docker 이미지 푸시
+    # 5. Docker 이미지 푸시
     - name: Push Docker images to Docker Hub
       run: |
         docker push syshin0116/modular-rag:fastapi-latest
         docker push syshin0116/modular-rag:nginx-latest
 
-    # 5. GCP 서버로 배포
+    # 6. GCP 서버로 배포
     - name: Deploy to GCP
       uses: appleboy/ssh-action@v0.1.3
       with:
