--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,6 @@ jobs:
         port: 22
         script: |
           cd /home/syshin0116/modular-rag
-          docker compose pull
-          docker compose up -d --remove-orphans
+          sudo docker compose pull
+          sudo docker compose up -d --remove-orphans
         debug: true
