feat: add docker prune to workflow, add certbot

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,4 +58,5 @@ jobs:
           cd /home/syshin0116/modular-rag
           sudo docker compose pull
           sudo docker compose up -d --remove-orphans
+          sudo docker system prune -f --volumes
         debug: true
