fix: remove github actions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### Custom
 logs/
 teddynote/
+.github/
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,visualstudiocode,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,visualstudiocode,dotenv
