--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -22,9 +22,16 @@ aiomysql = "^0.2.0"
 itsdangerous = "^2.2.0"
 jinja2 = "^3.1.4"
 cryptography = "^43.0.3"
+openai = "^1.57.4"
+langchain-community = "^0.3.12"
+langchain-openai = "^0.2.12"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+python-dotenv = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
